tests/codegen/pass/026-for.hyg
let mutable x: int = 0;
let mutable y: int = 10;

for ((); not(x = y); {x <- x + 1; y <- y - 1})
    print("x and y are different");

assert(x = y);
assert(x = 5)