tests/codegen/fail/028-array-empty.hyg
let arr: array {int} = array(0, 1);
println("should not print!")